# stt_test_1

./: .gitignore  main.py  pyproject.toml  test1.py
