[project]
name = "stt-test-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "bs4>=0.0.2",
    "faiss-cpu>=1.13.0",
    "faiss-gpu>=1.7.2",
    "gtts>=2.5.4",
    "huggingface-hub>=0.36.0",
    "kagglehub>=0.3.13",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.0",
    "langsmith>=0.4.47",
    "pandas>=2.3.3",
    "pydub>=0.25.1",
    "sentence-transformers>=5.1.2",
    "speechrecognition>=3.14.4",
    "torch>=2.9.1",
]
